--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     const status = document.getElementById('status');
     const mv = document.getElementById('mv');
 
-    mv.addEventListener('load', () => status.textContent = '✅ Model loaded');
+    mv.addEventListener('load', () => status.textContent = 'Hi!🤗 I'm Simon, nice to meet you');
     mv.addEventListener('error', (e) => {
       console.error('model-viewer error', e);
-      status.textContent = '❌ Model failed to load. Open DevTools Console for details.';
+      status.textContent = '❌ Model failed to load. Please call Simon! (+41 78 721 22 93)';
     });
 
     // Also confirm model-viewer loaded at all
