--- a/index.html
+++ b/index.html
@@ -1,61 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Project Title</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>3D Viewer Test</title>
 
-  <script type="module"
-    src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
-  </script>
+  <!-- model-viewer -->
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
   <style>
-    body {
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-      background: #ffffff;
-      color: #111;
-    }
-
-    .container {
-      max-width: 1200px;
-      margin: auto;
-      padding: 40px 20px;
-    }
-
-    h1 {
-      font-weight: 500;
-      margin-bottom: 10px;
-    }
-
-    p {
-      color: #666;
-      margin-bottom: 30px;
-    }
-
-    model-viewer {
-      width: 100%;
-      height: 70vh;
-      border-radius: 20px;
-      background: #f5f5f5;
-    }
+    body { margin: 0; font-family: system-ui, sans-serif; }
+    #status { padding: 12px; }
+    model-viewer { width: 100vw; height: 80vh; background: #f2f2f2; display: block; }
   </style>
 </head>
 <body>
+  <div id="status">Loading…</div>
 
-  <div class="container">
-    <h1>Project Name</h1>
-    <p>Short description of the concept / engineering idea.</p>
+  <model-viewer
+    id="mv"
+    src="./model.glb"
+    camera-controls
+    auto-rotate
+    environment-image="neutral"
+    exposure="1"
+    shadow-intensity="1"
+  ></model-viewer>
 
-    <model-viewer
-      src="model.glb"
-      camera-controls
-      auto-rotate
-      shadow-intensity="1"
-      exposure="1"
-      environment-image="neutral">
-    </model-viewer>
-  </div>
+  <script>
+    const status = document.getElementById('status');
+    const mv = document.getElementById('mv');
 
+    mv.addEventListener('load', () => status.textContent = '🤗 Hi, nice to meet you :)');
+    mv.addEventListener('error', (e) => {
+      console.error('model-viewer error', e);
+      status.textContent = '❌ Model failed to load. Please call Simon.';
+    });
+
+    // Also confirm model-viewer loaded at all
+    window.addEventListener('DOMContentLoaded', () => {
+      if (!customElements.get('model-viewer')) {
+        status.textContent = '❌ model-viewer script did NOT load (blocked/offline).';
+      }
+    });
+  </script>
 </body>
 </html>
