--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     mv.addEventListener('load', () => status.textContent = '🤗 Hi, nice to meet you :) <br>Talk to me: +41 78 721 22 93 Meet me online: simon.oetiker@gmail.com IRL: @Idaplatz');
     mv.addEventListener('error', (e) => {
       console.error('model-viewer error', e);
-      status.textContent = '❌ Model failed to load. Please call Simon (+41 78 721 22 93).';
+      status.textContent = '❌ Model failed to load. <br>Please call Simon (+41 78 721 22 93).';
     });
 
     // Also confirm model-viewer loaded at all
