--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     const status = document.getElementById('status');
     const mv = document.getElementById('mv');
 
-    mv.addEventListener('load', () => status.textContent = '🤗 Hi, nice to meet you :) <br>Talk to me: +41 78 721 22 93 Meet me online: simon.oetiker@gmail.com IRL: @Idaplatz');
+    mv.addEventListener('load', () => status.innerHTML = '🤗 Hi, nice to meet you :) <br>Talk to me: +41 78 721 22 93 Meet me online: simon.oetiker@gmail.com IRL: @Idaplatz');
     mv.addEventListener('error', (e) => {
       console.error('model-viewer error', e);
-      status.textContent = '❌ Model failed to load. <br>Please call Simon (+41 78 721 22 93).';
+      status.innerHTML = '❌ Model failed to load. <br>Please call Simon (+41 78 721 22 93).';
     });
 
     // Also confirm model-viewer loaded at all
