--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   const mv = document.getElementById('mv');
 
   mv.addEventListener('load', () => {
-    status.innerHTML = `🤗 Hi, nice to meet you :) /// Talk to me: +41 78 721 22 93 /// Meet me online: simon.oetiker@gmail.com /// IRL: @Idaplatz 🏘️`;
+    status.textcontent = `🤗 Hi, nice to meet you :) /// Talk to me: +41 78 721 22 93 /// Meet me online: simon.oetiker@gmail.com /// IRL: @Idaplatz 🏘️`;
   });
 
   mv.addEventListener('error', (e) => {
