--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
     exposure="1"
     shadow-intensity="1"
   ></model-viewer>
-
+  <!-- Neue Zeile unter dem Viewer -->
+  <div id="footer">
+    © 2026 Simon Oetiker — Concept Design / Engineering
+  </div>
+  
 <script>
   const status = document.getElementById('status');
   const mv = document.getElementById('mv');
