--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     mv.addEventListener('load', () => {
       status.innerHTML = `🤗 Hi, nice to meet you :)<br>
-        Talk to me: +41 78 721 22 93<br>
+        Talk to me: <b>+41 78 721 22 93</b><br>
         Meet me online: simon.oetiker@gmail.com<br>
         IRL: @Idaplatz`;
 
