--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <model-viewer
     id="mv"
-    src="./model.glb"
+    src="./scanmitcaplowlowres.glb"
     camera-controls
     auto-rotate
     environment-image="neutral"
