--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
     mv.addEventListener('load', () => {
       status.innerHTML = `🤗 Hi, nice to meet you :)<br>
-        Talk to me: <b>+41 78 721 22 93</b><br>
-        Meet me online: simon.oetiker@gmail.com<br>
-        IRL: @Idaplatz`;
+        Talk to me: <b>+41 78 721 22 93</b> 📞<br>
+        Meet me online: simon.oetiker@gmail.com 💌<br>
+        IRL: @Idaplatz 🏘️`;
 
       footer.innerHTML = `© 2026 Simon Oetiker<br>
         Concept Design / Engineering`;
@@ -49,7 +49,7 @@
     mv.addEventListener('error', (e) => {
       console.error('model-viewer error', e);
       status.innerHTML = `❌ Model failed to load.<br>
-        Please call Simon (+41 78 721 22 93).`;
+        Please text Simon (+41 78 721 22 93).`;
 
       footer.innerHTML = ``;
     });
@@ -57,7 +57,7 @@
     // Also confirm model-viewer loaded at all
     window.addEventListener('DOMContentLoaded', () => {
       if (!customElements.get('model-viewer')) {
-        status.textContent = '❌ model-viewer script did NOT load (blocked/offline).';
+        status.textContent = '❌ model-viewer script did NOT load (blocked/offline). Please text Simon (+41 78 721 22 93).';
       }
     });
   </script>
