--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     mv.addEventListener('load', () => {
       status.innerHTML = `🤗 Hi, nice to meet you :)<br>
         Talk to me: <b>+41 78 721 22 93</b> 📞<br>
-        Meet me online: <b>simon.oetiker@gmail.com</b> 💌<br>
+        Meet me online: simon.oetiker@gmail.com 💌<br>
         IRL: @Idaplatz 🏘️`;
 
       footer.innerHTML = `2026 Simon Oetiker<br>
-        Concept Design – Prototyping – Engineering`;
+        Concept Design /// Prototyping /// Additive Manufacturing`;
     });
 
     mv.addEventListener('error', (e) => {
