--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         Meet me online: simon.oetiker@gmail.com 💌<br>
         IRL: @Idaplatz 🏘️`;
 
-      footer.innerHTML = `2026 Simon Oetiker<br>
-        Concept Design /// Prototyping /// Additive Manufacturing`;
+      footer.innerHTML = `Simon Oetiker ///–––––––––––––––––––––––––––––––––––––––––><br>
+        Research /// Concept Design /// Prototyping /// Manufacturing`;
     });
 
     mv.addEventListener('error', (e) => {
