--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         Meet me online: simon.oetiker@gmail.com 💌<br>
         IRL: @Idaplatz 🏘️`;
 
-      footer.innerHTML = `Simon Oetiker ///–––––––––––––––––––––––––––––––––––––––––><br>
+      footer.innerHTML = `Simon Oetiker –––––––––––––––––––––––––––––––––––––––––><br>
         Research /// Concept Design /// Prototyping /// Manufacturing`;
     });
 
