--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
     mv.addEventListener('load', () => {
       status.innerHTML = `🤗 Hi, nice to meet you :)<br>
-        Talk to me: <b>+41 78 721 22 93</b> 📞<br>
-        Meet me online: simon.oetiker@gmail.com 💌<br>
-        IRL: @Idaplatz 🏘️`;
+        > Talk to me: <b>+41 78 721 22 93</b> 📞<br>
+        > Meet me online: simon.oetiker@gmail.com 💌<br>
+        > IRL: @Idaplatz 🏘️`;
 
-      footer.innerHTML = `Simon Oetiker –––––––––––––––––––––––––––––––––––––––––><br>
-        Research /// Concept Design /// Prototyping /// Manufacturing`;
+      footer.innerHTML = `Simon Oetiker ––––––><br>
+        > Research /// Concept Design /// Prototyping /// Manufacturing`;
     });
 
     mv.addEventListener('error', (e) => {
