--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         > IRL: @Idaplatz 🏘️`;
 
       footer.innerHTML = `See you soon! (｡- .•)<br>
-        > Research /// Concept Design /// Prototyping /// Manufacturing`;
+        > Research /// Concept Design /// Modelling /// Prototyping /// Manufacturing`;
     });
 
     mv.addEventListener('error', (e) => {
