--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 </head>
 
 <body>
+  {
+  margin: 0;
+  font-family: system-ui, sans-serif;
+  background: #2b2b2b;   /* dunkelgrau */
+}
   <div id="status">Loading…</div>
 
   <model-viewer
