--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     body { margin: 0; font-family: system-ui, sans-serif; }
     #status { padding: 12px; }
     #footer { padding: 12px; }
-    model-viewer { width: 100vw; height: 80vh; background: #f2f2f2; display: block; }
+    model-viewer { width: 100vw; height: 80vh; background: #2a2a2a; display: block; }
   </style>
 </head>
 
