--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     body { margin: 0; font-family: system-ui, sans-serif; }
     #status { padding: 12px; }
     #footer { padding: 12px; }
-    model-viewer { width: 100vw; height: 80vh; background: #ffe3c3; display: block; }
+    model-viewer { width: 100vw; height: 80vh; background: #f7daea; display: block; }
   </style>
 </head>
 
