--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>3D Viewer</title>
 
-  <!-- model-viewer -->
+  <!-- model-viewer -->    // color (weiss: f2f2f2 hautfarben: ffe3c3 rosa/lavendel: f7daea)
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
   <style>
     body { margin: 0; font-family: system-ui, sans-serif; }
     #status { padding: 12px; }
     #footer { padding: 12px; }
-    model-viewer { width: 100vw; height: 80vh; background: #f7daea; display: block; }
+    model-viewer { width: 100vw; height: 80vh; background: #f2f2f2; display: block; }
   </style>
 </head>
 
