--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     body { margin: 0; font-family: system-ui, sans-serif; }
     #status { padding: 12px; }
     #footer { padding: 12px; }
-    model-viewer { width: 100vw; height: 80vh; background: #f2f2f2; display: block; }
+    model-viewer { width: 100vw; height: 80vh; background: #f2f2f2; display: block; cursor: url("cursor-grab.png") 24 24, grab; }
+    model-viewer:active {cursor: url("cursor-grabbing.png") 24 24, grabbing;
   </style>
 </head>
 
